--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "nodemon server.js",
-    "watch": "nodemon ./src/app"
+    "watch": "nodemon src/index.js"
   },
   "keywords": [],
   "author": "",
